--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/magic_enum"]
 	path = vendor/magic_enum
 	url = https://github.com/Neargye/magic_enum
+[submodule "vendor/nano-signal-slot"]
+	path = vendor/nano-signal-slot
+	url = https://github.com/NoAvailableAlias/nano-signal-slot
