--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/nano-signal-slot"]
 	path = vendor/nano-signal-slot
 	url = https://github.com/NoAvailableAlias/nano-signal-slot
+[submodule "vendor/json"]
+	path = vendor/json
+	url = https://github.com/nlohmann/json
