Config profiles & per-feature hotkeys: profile-scoped fields, F2 GUI toggle, per-cheat hotkey capture/reset, Timescale typed input, profile rename/delete (default protected), proper reload on profile switch, docs update

--- a/BA-Cheeto.vcxproj
+++ b/BA-Cheeto.vcxproj
@@ -20,6 +20,7 @@
     <ClInclude Include="src\core\events\event_manager.h" />
     <ClInclude Include="src\core\pipe\pipe_manager.h" />
     <ClInclude Include="src\core\rendering\backend\dx11_backend.h" />
+  <ClInclude Include="src\core\rendering\backend\dx12_backend.h" />
     <ClInclude Include="src\core\rendering\backend\renderer_backend.h" />
     <ClInclude Include="src\core\rendering\fonts\NotoSans.hpp" />
     <ClInclude Include="src\core\rendering\renderer.h" />
@@ -42,6 +43,7 @@
     <ClInclude Include="src\user\cheat\features\player\NoCost.h" />
     <ClInclude Include="src\user\main.h" />
     <ClInclude Include="src\utils\dx_utils.h" />
+  <ClInclude Include="src\utils\hotkey_manager.h" />
   <ClInclude Include="src\utils\config_manager.h" />
     <ClInclude Include="src\utils\logger.h" />
     <ClInclude Include="src\utils\singleton.h" />
@@ -76,6 +78,7 @@
     <ClCompile Include="src\core\events\event_manager.cpp" />
     <ClCompile Include="src\core\pipe\pipe_manager.cpp" />
     <ClCompile Include="src\core\rendering\backend\dx11_backend.cpp" />
+  <ClCompile Include="src\core\rendering\backend\dx12_backend.cpp" />
     <ClCompile Include="src\core\rendering\renderer.cpp" />
     <ClCompile Include="src\dllmain.cpp" />
     <ClCompile Include="src\memory\hook_manager.cpp" />
@@ -98,6 +101,7 @@
     <ClCompile Include="src\user\cheat\features\player\NoCost.cpp" />
     <ClCompile Include="src\user\main.cpp" />
     <ClCompile Include="src\utils\dx_utils.cpp" />
+  <ClCompile Include="src\utils\hotkey_manager.cpp" />
     <ClCompile Include="src\utils\logger.cpp" />
   <ClCompile Include="src\utils\config_manager.cpp" />
     <ClCompile Include="vendor\imgui\backends\imgui_impl_dx11.cpp">
